
-------------------------------------------------------------
   Note: the issue number refer to SDC-CH internal tracking.
-------------------------------------------------------------

-------------------------------------------------------------
  Current version: Phosphoros 1.3 (dev)                      
-------------------------------------------------------------

- Following up issue 26751, which was fixed temporary, we get 
  the type of the OBJECTD_ID column in the sampling and index 
  files from the type found in the input catalog file.
    * https://redmine.isdc.unige.ch/issues/26756

- Fix the configuration produced for the CPC. 
    * reported in https://redmine.isdc.unige.ch/issues/26640
    
- Fix the PP unit clash.
    * https://redmine.isdc.unige.ch/issues/26822
    
- Fix the computation of the Zero point corrections for 
  photometries flagged as missing or upper limit. 
    * https://redmine.isdc.unige.ch/issues/26640

- Change the way the PP are extracted from the SEDs to speed 
  up the interface.
    * https://redmine.isdc.unige.ch/issues/26860
    
-------------------------------------------------------------
 Reference: build from 2022 May 20                   
-------------------------------------------------------------

- Add this change log   
    * https://redmine.isdc.unige.ch/issues/26507

- Filters have been added to the Auxiliary Data 
    * https://redmine.isdc.unige.ch/issues/21756

- Downloading of the Auxiliary Data has been fixed 
    * https://redmine.isdc.unige.ch/issues/26654

- Typos and wording have been fixed/updated 
    * https://redmine.isdc.unige.ch/issues/26406

- Locales using ',' as decimal separator are no longer a 
  problem for saving the configuration 
    * https://redmine.isdc.unige.ch/issues/26411

- Fix the way the grid files are named. This should fix a 
  bunch of issues (to be confirmed individually)
    * https://redmine.isdc.unige.ch/issues/26447
    * https://redmine.isdc.unige.ch/issues/26504